# AK

./: README.md  pyproject.toml  translator.py
artem_sher-lab3/: golden_test.py  simulation.py
artem_sher-lab3/.github/workflows/: python.yml
artem_sher-lab3/code/: prob1.txt
artem_sher-lab3/golden/: cat.yml  cat_fast.yml  hello.yml
artem_sher-lab3/inputs/: name.txt
artem_sher-lab3/machine/: control_unit.py  datapath.py
code/: cat.txt  hello.txt  hello_user_name.txt
golden/: hello_user.yml  prob1.yml
inputs/: fast_name.txt
machine/: isa.py
